devops_short_course/k8s_folder/k8s_volume/postgres_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
        - name: postgres-app
          image: postgres:14
          ports:
            - containerPort: 5432
          #with configMap  
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-app
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30005
  type: NodePort
