devops_short_course/k8s_folder/k8s_volume/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sen-ingress
  # namespace: spring-app
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prodv1"
    kubernetes.io/ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - iphone.sen-pai.live
    secretName: sen-ingress-tls
  rules:
  - host: iphone.sen-pai.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
